Fix profile image stretching

--- a/client/src/components/Profile/ProfileCard.less
+++ b/client/src/components/Profile/ProfileCard.less
@@ -15,6 +15,7 @@
   width: 10rem;
   aspect-ratio: 1 / 1;
 
+  object-fit: cover;
   border-radius: 100rem;
 }
 
